--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,8 @@ dependencies:
   cloud_firestore: ^4.17.0
   font_awesome_flutter: ^10.7.0
   google_fonts: ^6.2.1
+  provider: ^6.1.2 # atau versi terbaru
+  flutter_rating_bar: ^4.0.1 # atau versi terbaru
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -72,6 +74,10 @@ flutter:
   assets:
     - assets/logo.png
     - assets/succes.json
+    - assets/images/sepatu.jpg
+    - assets/images/sepatu1.jpg
+    - assets/images/sepatu2.jpg
+    - assets/images/ #
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
